* RTPathOCLRenderEngine::WaitNewFrame() takes is not more synchronous with rendering refresh
* The use of more than 64 logical processors on Windows is now extended to all render engines
* It is now possible to render scenes without light sources (!)

### Fixed Bugs

* Fixed a rendering difference when using/not using geometry negative scale transformations (issue #309)
* Fixed an out of bound access in BAKECPU
* Fixed a problem when using path.forceblackbackground.enable and env. lights
* Fixed a problem with scenes with very hard light paths and Metropolis sampler (issue #312)
* Sampler shared data are now reseted at the end of a scene edit (issue #312)
* Fixed a problem in automatic cache radius estimation of PhotonGI when using Orthographic camera (issue #324)
* Fixed an OpenCL compilation error when using large number of objects on some old GPUs
* Fixed a problem with BlendLuxCore when parsing more than 9 image pipelines (#336)
* Fixed a bug causing fireflies when using light tracing for caustics in some case (#329)
* Fixed a crash when using RemoveUnusedTextures() with Volumes (issue #377)
* Fixed a banding problem when using sphere light sources with very small radius (issue LuxCoreRender/BlendLuxCore#477)

Note: due to Glossycoating updated support for bump mapping on GPUs, some old scene using this kind of material/bump map combination may require some fix.

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* LuxCore API requires latin locale
* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.