@@ -26,7 +26,6 @@
 
 using namespace std;
 using namespace luxrays;
-using namespace slg;
 
 //------------------------------------------------------------------------------
 // SafeSave
