@@ -18,11 +18,9 @@
 
 #include <boost/format.hpp>
 
-#include "slg/engines/cpurenderengine.h"
+#include "luxrays/utils/thread.h"
 
-#if defined(_WIN32) || defined(WIN32) || defined(_WIN64) || defined(WIN64)
-#include <Windows.h>
-#endif
+#include "slg/engines/cpurenderengine.h"
 
 using namespace std;
 using namespace luxrays;
@@ -190,13 +188,7 @@ Properties CPURenderEngine::ToProperties(const Properties &cfg) {
 const Properties &CPURenderEngine::GetDefaultProps() {
 	static Properties props = Properties() <<
 			RenderEngine::GetDefaultProps() <<
-//For Windows version greater than Windows 7,modern way of calculating processor count is used 
-//May not work with Windows version prior to Windows 7
-#if defined(_WIN32) || defined(WIN32) || defined(_WIN64) || defined(WIN64)
-			Property("native.threads.count")((int)GetActiveProcessorCount(ALL_PROCESSOR_GROUPS));
-#else 
-			Property("native.threads.count")(boost::thread::hardware_concurrency());
-#endif
+			Property("native.threads.count")((u_int)GetHardwareThreadCount());
 
 	return props;
 }
