@@ -19,13 +19,11 @@
 #include "slg/engines/oclrenderengine.h"
 
 #include "luxrays/core/intersectiondevice.h"
+#include "luxrays/utils/thread.h"
 #if !defined(LUXRAYS_DISABLE_OPENCL)
 #include "luxrays/devices/ocldevice.h"
 #endif
 
-#if defined(_WIN32) || defined(WIN32) || defined(_WIN64) || defined(WIN64)
-#include <Windows.h>
-#endif
 
 using namespace std;
 using namespace luxrays;
@@ -162,13 +160,7 @@ const Properties &OCLRenderEngine::GetDefaultProps() {
 #endif
 			Property("opencl.gpu.workgroup.size")(32) <<
 			Property("opencl.devices.select")("") <<
-//For Windows version greater than Windows 7,modern way of calculating processor count is used 
-//May not work with Windows version prior to Windows 7
-#if defined(_WIN32) || defined(WIN32) || defined(_WIN64) || defined(WIN64)
-			Property("opencl.native.threads.count")((int)GetActiveProcessorCount(ALL_PROCESSOR_GROUPS)) <<
-#else
-			Property("opencl.native.threads.count")(boost::thread::hardware_concurrency()) <<
-#endif
+			Property("opencl.native.threads.count")((u_int)GetHardwareThreadCount()) <<
 			Property("opencl.outofcore.enable")(false);
 
 	return props;
